# directive-memory

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: release.yml
crates/api/: Cargo.toml
crates/api/src/: auth.rs  error.rs  lib.rs  state.rs
crates/api/src/routes/: facts.rs  files.rs  mod.rs  search.rs  static_ui.rs  stats.rs
crates/api/tests/: facts.rs  files.rs  health.rs  search.rs  stats.rs
crates/core/: Cargo.toml
crates/core/src/: chunker.rs  config.rs  core.rs  db.rs  error.rs  indexer.rs  lib.rs  search.rs  source_type.rs  stats.rs  writeback.rs
crates/core/tests/: core_writeback.rs  db.rs  indexer.rs  read_file.rs  search.rs  writeback.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  tools.rs
docs/superpowers/plans/: 2026-04-18-directive-memory-v1.md
migrations/: 20260418000001_initial.sql
src/: main.rs
web/: app.js  index.html  styles.css
