[workspace]
resolver = "2"
members = ["crates/core", "crates/api", "crates/mcp"]
default-members = ["."]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/directive-systems/directive-memory"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
regex = "1"
once_cell = "1"
config = { version = "0.14", default-features = false, features = ["toml"] }
toml = "0.8"

dm-core = { path = "crates/core" }
dm-api  = { path = "crates/api"  }
dm-mcp  = { path = "crates/mcp"  }

[package]
name = "directive-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "directive-memory"
path = "src/main.rs"

[dependencies]
dm-core.workspace = true
dm-api.workspace = true
dm-mcp.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
axum = "0.7"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"
