[package]
name = "dm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
walkdir.workspace = true
regex.workspace = true
once_cell.workspace = true
config.workspace = true
toml.workspace = true
shellexpand = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "io-util", "signal", "test-util"] }
tempfile = "3"
filetime = "0.2"
