[package]
name = "dm-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dm-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rmcp = { version = "0.1", features = ["server", "transport-io"] }
schemars = "0.8"
